--- a/F5.md
+++ b/F5.md
@@ -1,2 +1,2 @@
-If you wish to test interoperability with F5's implementation contact our product manager Dawn Parzych (D.Parzych@F5.com).
+If you wish to test interoperability with F5's implementation contact our product manager Dawn Parzych (D.Parzych@F5.com) or Jeroen de Borst (J.deBorst@f5.com).
 
